[tool.poetry]
name = "segrid4demo"
version = "1.0"
description = ""
authors = ["Yaboxi <z.yaboxi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"
pytest = "^6.2.5"
pytest-xdist = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
